Migrate to Swagger 3.0
