# swagger_server/models/trade.py
@@ -1,0 +1,92 @@
+# coding: utf-8
+
+from __future__ import absolute_import
+from datetime import date, datetime  # noqa: F401
+
+from typing import List, Dict  # noqa: F401
+
+from swagger_server.models.base_model_ import Model
+from swagger_server import util
+
+
+class Trade(Model):
+    """NOTE: This class is auto generated by the swagger code generator program.
+
+    Do not edit the class manually.
+    """
+    def __init__(self, price: float=None, quantity: int=None):  # noqa: E501
+        """Trade - a model defined in Swagger
+
+        :param price: The price of this Trade.  # noqa: E501
+        :type price: float
+        :param quantity: The quantity of this Trade.  # noqa: E501
+        :type quantity: int
+        """
+        self.swagger_types = {
+            'price': float,
+            'quantity': int
+        }
+
+        self.attribute_map = {
+            'price': 'price',
+            'quantity': 'quantity'
+        }
+        self._price = price
+        self._quantity = quantity
+
+    @classmethod
+    def from_dict(cls, dikt) -> 'Trade':
+        """Returns the dict as a model
+
+        :param dikt: A dict.
+        :type: dict
+        :return: The Trade of this Trade.  # noqa: E501
+        :rtype: Trade
+        """
+        return util.deserialize_model(dikt, cls)
+
+    @property
+    def price(self) -> float:
+        """Gets the price of this Trade.
+
+        Trade price  # noqa: E501
+
+        :return: The price of this Trade.
+        :rtype: float
+        """
+        return self._price
+
+    @price.setter
+    def price(self, price: float):
+        """Sets the price of this Trade.
+
+        Trade price  # noqa: E501
+
+        :param price: The price of this Trade.
+        :type price: float
+        """
+
+        self._price = price
+
+    @property
+    def quantity(self) -> int:
+        """Gets the quantity of this Trade.
+
+        Trade quantity  # noqa: E501
+
+        :return: The quantity of this Trade.
+        :rtype: int
+        """
+        return self._quantity
+
+    @quantity.setter
+    def quantity(self, quantity: int):
+        """Sets the quantity of this Trade.
+
+        Trade quantity  # noqa: E501
+
+        :param quantity: The quantity of this Trade.
+        :type quantity: int
+        """
+
+        self._quantity = quantity
