# swagger_server/swagger/swagger.yaml
@@ -1,142 +1,243 @@
----
-swagger: "2.0"
+openapi: 3.0.1
 info:
-  description: "<h2>Server Code for HacknRoll 2024 Market-Maker</h2>"
+  title: Market-Maker REST API
+  description: <h2>Server Code for HacknRoll 2024 Market-Maker</h2>
   version: "1.0"
-  title: "Market-Maker REST API"
+servers:
+- url: /
 paths:
   /users/{userId}/orders:
     post:
       tags:
-      - "Market Maker"
-      summary: "Place an order"
-      description: "Place an order in the market"
-      operationId: "place_order"
-      produces:
-      - "application/json"
+      - Market Maker
+      summary: Place an order
+      description: Place an order in the market
+      operationId: place_order
       parameters:
-      - name: "userId"
-        in: "path"
-        description: "User ID"
+      - name: userId
+        in: path
+        description: User ID
         required: true
-        type: "string"
-      - in: "body"
-        name: "order"
-        description: "Order Information"
-        required: true
+        style: simple
+        explode: false
         schema:
-          $ref: "#/definitions/Order"
+          type: string
+      requestBody:
+        description: Order Information
+        content:
+          '*/*':
+            schema:
+              $ref: '#/components/schemas/Order'
+        required: true
       responses:
         "200":
-          description: "OK"
+          description: OK
+          content: {}
         "400":
-          description: "Bad Request"
+          description: Bad Request
+          content: {}
         "500":
-          description: "Internal Server Error"
-      x-swagger-router-controller: "swagger_server.controllers.market_maker_controller"
+          description: Internal Server Error
+          content: {}
+      x-swagger-router-controller: swagger_server.controllers.market_maker_controller
+      x-codegen-request-body-name: order
+      x-openapi-router-controller: swagger_server.controllers.market_maker_controller
   /user:
     post:
       tags:
-      - "User"
-      summary: "Create a new user"
-      description: "Create a new user"
-      operationId: "create_user"
-      produces:
-      - "application/json"
+      - User
+      summary: Create a new user
+      description: Create a new user
+      operationId: create_user
       parameters:
-      - name: "name"
-        in: "query"
-        description: "User name"
+      - name: name
+        in: query
+        description: User name
         required: true
-        type: "string"
+        style: form
+        explode: true
+        schema:
+          type: string
       responses:
         "200":
-          description: "OK"
+          description: OK
+          content: {}
         "400":
-          description: "Bad Request"
+          description: Bad Request
+          content: {}
         "500":
-          description: "Internal Server Error"
-      x-swagger-router-controller: "swagger_server.controllers.user_controller"
+          description: Internal Server Error
+          content: {}
+      x-swagger-router-controller: swagger_server.controllers.user_controller
+      x-openapi-router-controller: swagger_server.controllers.user_controller
   /users/{userId}:
     get:
       tags:
-      - "User"
-      summary: "Get user information"
-      description: "Get user information"
-      operationId: "get_user"
-      produces:
-      - "application/json"
+      - User
+      summary: Get user information
+      description: Get user information
+      operationId: get_user
       parameters:
-      - name: "userId"
-        in: "path"
-        description: "User ID"
+      - name: userId
+        in: path
+        description: User ID
         required: true
-        type: "string"
+        style: simple
+        explode: false
+        schema:
+          type: string
       responses:
         "200":
-          description: "OK"
-          schema:
-            $ref: "#/definitions/User"
+          description: OK
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/User'
         "400":
-          description: "Bad Request"
+          description: Bad Request
+          content: {}
         "500":
-          description: "Internal Server Error"
-      x-swagger-router-controller: "swagger_server.controllers.user_controller"
+          description: Internal Server Error
+          content: {}
+      x-swagger-router-controller: swagger_server.controllers.user_controller
+      x-openapi-router-controller: swagger_server.controllers.user_controller
   /users/{userId}/update:
     put:
       tags:
-      - "User"
-      summary: "Update user score"
-      description: "Update user score"
-      operationId: "update_user"
-      produces:
-      - "application/json"
+      - User
+      summary: Update user score
+      description: Update user score
+      operationId: update_user
       parameters:
-      - name: "userId"
-        in: "path"
-        description: "User ID"
+      - name: userId
+        in: path
+        description: User ID
         required: true
-        type: "string"
-      - name: "score"
-        in: "query"
-        description: "User score"
+        style: simple
+        explode: false
+        schema:
+          type: string
+      - name: score
+        in: query
+        description: User score
         required: true
-        type: "number"
+        style: form
+        explode: true
+        schema:
+          type: number
       responses:
         "200":
-          description: "OK"
+          description: OK
+          content: {}
         "400":
-          description: "Bad Request"
+          description: Bad Request
+          content: {}
         "500":
-          description: "Internal Server Error"
-      x-swagger-router-controller: "swagger_server.controllers.user_controller"
-definitions:
-  User:
-    properties:
-      name:
-        type: "string"
-        description: "User name"
-      id:
-        type: "string"
-        description: "User ID"
-      score:
-        type: "number"
-        description: "User balance"
-    example:
-      score: 0.80082819046101150206595775671303272247314453125
-      name: "name"
-      id: "id"
-  Order:
-    properties:
-      type:
-        type: "string"
-        description: "Order type (buy or sell)"
-        enum:
-        - "buy"
-        - "sell"
-      quantity:
-        type: "integer"
-        description: "Order quantity"
-      price:
-        type: "number"
-        description: "Order price"
+          description: Internal Server Error
+          content: {}
+      x-swagger-router-controller: swagger_server.controllers.user_controller
+      x-openapi-router-controller: swagger_server.controllers.user_controller
+  /orderbook:
+    get:
+      tags:
+      - Market Maker
+      summary: Get top 10 unfulfilled buy and sell orders
+      description: Get order book
+      operationId: get_order_book
+      responses:
+        "200":
+          description: OK
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/Order'
+                x-content-type: application/json
+        "400":
+          description: Bad Request
+          content: {}
+        "500":
+          description: Internal Server Error
+          content: {}
+      x-swagger-router-controller: swagger_server.controllers.market_maker_controller
+      x-openapi-router-controller: swagger_server.controllers.market_maker_controller
+components:
+  schemas:
+    User:
+      required:
+      - id
+      - name
+      type: object
+      properties:
+        name:
+          type: string
+          description: User name
+        id:
+          type: string
+          description: User ID
+        score:
+          type: number
+          description: User balance
+        buy_orders:
+          type: array
+          description: User buy orders
+          items:
+            $ref: '#/components/schemas/Order'
+        sell_orders:
+          type: array
+          description: User sell orders
+          items:
+            $ref: '#/components/schemas/Order'
+        buys:
+          type: array
+          description: User buy transactions
+          items:
+            $ref: '#/components/schemas/Trade'
+        sells:
+          type: array
+          description: User sell transactions
+          items:
+            $ref: '#/components/schemas/Trade'
+      example:
+        score: 20
+        name: name
+        id: id
+        buy_orders: []
+        sell_orders: []
+        buys: []
+        sells: []
+    Order:
+      type: object
+      properties:
+        order_id:
+          type: string
+          description: Order ID
+        type:
+          type: string
+          description: Order type (buy or sell)
+          enum:
+          - B
+          - S
+        quantity:
+          type: integer
+          description: Order quantity
+        price:
+          type: number
+          description: Order price
+      example:
+        order_id: f1d8c9e0-4f6e-4b1e-8f1a-5c9b1b9b1b9b
+        type: B
+        quantity: 3
+        price: 10
+    Trade:
+      type: object
+      properties:
+        price:
+          type: number
+          description: Trade price
+        quantity:
+          type: integer
+          description: Trade quantity
+x-original-swagger-version: "2.0"
+
